--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
-        <title>Lorem ipsum</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portal SoftN</title>
         <link href="css/normalize.css" rel="stylesheet" type="text/css"/>
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
@@ -13,26 +13,48 @@
             <div class="container">
                 <div class="row clearfix">
                     <div class="col-sm-6">
-                        <img id="logo" src="img/545x300.svg" alt="Lorem ipsum">
+                        <img id="logo" src="img/softn.png" alt="Portal SoftN">
                     </div>
                     <div class="col-sm-6">
-                        <h2>Headings</h2>
+                        <h2>Desarrollo de Aplicaciones Multiplataforma / Web</h2>
                         <ul class="list-inline">
-                            <li><span class="label label-primary">item</span></li>
-                            <li><span class="label label-danger">item</span></li>
-                            <li><span class="label label-violet">item</span></li>
-                            <li><span class="label label-primaryDark">item</span></li>
-                            <li><span class="label label-violet">item</span></li>
-                            <li><span class="label label-orange">item</span></li>
-                            <li><span class="label label-warning">item</span></li>
-                            <li><span class="label label-success">item</span></li>
-                            <li><span class="label label-grey">item</span></li>
-                            <li><span class="label label-orange">item</span></li>
-                            <li><span class="label label-default">item</span></li>
-                            <li><span class="label label-black">item</span></li>
-                            <li><span class="label label-info">item</span></li>
-                            <li><span class="label label-light">item</span></li>
-                            <li><span class="label label-pink">item</span></li>
+                            <li><span class="label label-primary">PHP</span></li>
+                            <li><span class="label label-danger">Java</span></li>
+                            <li><span class="label label-violet">C#</span></li>
+                            <li><span class="label label-primary">MySql</span></li>
+                            <li><span class="label label-primaryDark">JQuery</span></li>
+                            <li><span class="label label-violet">Bootstrap</span></li>
+                            <li><span class="label label-primary">CSS</span></li>
+                            <li><span class="label label-orange">HTML</span></li>
+                            <li><span class="label label-warning">JavaScript</span></li>
+                            <li><span class="label label-success">Android</span></li>
+                            <li><span class="label label-grey">WordPress</span></li>
+                            <li><span class="label label-orange">SMF</span></li>
+                            <li><span class="label label-default">MVC</span></li>
+                            <li><span class="label label-default">XML</span></li>
+                            <li><span class="label label-danger">AngularJS</span></li>
+                            <li><span class="label label-grey">Unity3D</span></li>
+                            <li><span class="label label-black">GitHub</span></li>
+                            <li><span class="label label-info">Subversion</span></li>
+                            <li><span class="label label-primary">Bitbucket</span></li>
+                            <li><span class="label label-primary">NetBeans</span></li>
+                            <li><span class="label label-violet">Visual Studio</span></li>
+                            <li><span class="label label-violet">Eclipse</span></li>
+                            <li><span class="label label-success">Android Studio</span></li>
+                            <li><span class="label label-primary">Workbench</span></li>
+                            <li><span class="label label-orange">XAMPP</span></li>
+                            <li><span class="label label-orange">Ubuntu</span></li>
+                            <li><span class="label label-light">Composer</span></li>
+                            <li><span class="label label-pink">SASS</span></li>
+                            <li><span class="label label-primary">Python</span></li>
+                            <li><span class="label label-default">JSON</span></li>
+                        </ul>
+                        <h2>Redes sociales</h2>
+                        <ul class="list-inline">
+                            <li><a href="https://es.linkedin.com/in/nicolasmarulanda" title="linkedin" target="_blank"><span class="label label-primary">Linkedin</span></a></li>
+                            <li><a href="https://twitter.com/nmarulo" title="twitter" target="_blank"><span class="label label-primary">Twitter</span></a></li>
+                            <li><a href="https://github.com/nmarulo" title="github" target="_blank"><span class="label label-black">GitHub</span></a></li>
+                            <li><a href="skype:nmarulo?chat" title="skype" target="_blank"><span class="label label-primary">Skype</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -41,10 +63,13 @@
                 <div class="container">
                     <ul class="nav nav-pills">
                         <li role="presentation">
-                            <a href="#" title="">Lorem ipsum</a>
+                            <a href="#proyectos-personales" title="">Proyectos personales</a>
                         </li>
                         <li role="presentation">
-                            <a href="#" title="">Page 1</a>
+                            <a href="#proyectos-particulares" title="">Proyectos particulares</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#proyectos-otros" title="">Otros proyectos</a>
                         </li>
                     </ul>
                 </div>
@@ -53,30 +78,80 @@
         <div>
             <div class="container">
                 <div class="page-header">
-                    <h2 id="proyectos-personales">Lorem ipsum dolor sit amet <small>,consectetur adipiscing elit.</small></h2>
+                    <h2 id="proyectos-personales">Proyectos personales <small>En desarrollo o finalizados.</small></h2>
                 </div>
                 <div class="row clearfix">
                     <div class="col-sm-6">
-                        <a href="#" class="thumbnail">
-                            <img src="img/545x300.svg" alt="Lorem ipsum">
+                        <a href="softn-generating-receipt.html" class="thumbnail" title="Generador de facturas">
+                            <img src="img/softn.png" alt="Generador de facturas">
                             <div class="caption">
-                                Lorem ipsum
+                                Generador de facturas
                             </div>
                         </a>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" class="thumbnail">
-                            <img src="img/545x300.svg" alt="Lorem ipsum">
+                        <a href="softn-cms.html" class="thumbnail" title="SoftN CMS">
+                            <img src="img/softn-cms.png" alt="SoftN CMS">
                             <div class="caption">
-                                Lorem ipsum
+                                SoftN CMS
                             </div>
                         </a>
                     </div>
                     <div class="col-sm-6">
-                        <a href="#" class="thumbnail">
-                            <img src="img/545x300.svg" alt="Lorem ipsum">
+                        <a href="benalmas.html" class="thumbnail" title="Benalmas | Caminando por benalmadena">
+                            <img src="img/benalmas.png" alt="Benalmas">
                             <div class="caption">
-                                Lorem ipsum
+                                Benalmas | Caminando por benalmadena
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="container">
+                <div class="page-header">
+                    <h2 id="proyectos-particulares">Proyectos particulares</h2>
+                </div>
+                <div class="row clearfix">
+                    <div class="col-sm-6">
+                        <a href="electro-car.html" class="thumbnail" title="Electro Car | Servicio profesional de Car-Audio">
+                            <img src="img/electro-car.png" alt="Electro car">
+                            <div class="caption">
+                                Electro Car | Servicio profesional de Car-Audio
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="container">
+                <div class="page-header">
+                    <h2 id="proyectos-otros">Otros <small>Proyectos en los que participe o participo.</small></h2>
+                </div>
+                <div class="row clearfix">
+                    <div class="col-sm-6">
+                        <a href="food-fighter-malaga-nam-edition.html" class="thumbnail" title="Food Fighter: Málaga Ñam Edition">
+                            <img src="img/food-fighter.png" alt="Food Fighter: Málaga Ñam Edition">
+                            <div class="caption">
+                                Food Fighter: Málaga Ñam Edition
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="invocator-the-dark-ritual.html" class="thumbnail" title="Invocator : the dark ritual">
+                            <img src="img/invocator.png" alt="Invocator : the dark ritual">
+                            <div class="caption">
+                                Invocator : the dark ritual
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="inexistente.html" class="thumbnail" title="Inexistente">
+                            <img src="img/inexistente.png" alt="Inexistente">
+                            <div class="caption">
+                                Inexistente
                             </div>
                         </a>
                     </div>
@@ -95,7 +170,5 @@
                 </div>
             </div>
         </footer>
-        <script src="js/jquery-1.12.0.js" type="text/javascript"></script>
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
     </body>
 </html>
