--- a/index.html
+++ b/index.html
@@ -1,174 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portal SoftN</title>
-        <link href="css/normalize.css" rel="stylesheet" type="text/css"/>
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="css/style.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <header>
-            <div class="container">
-                <div class="row clearfix">
-                    <div class="col-sm-6">
-                        <img id="logo" src="img/softn.png" alt="Portal SoftN">
-                    </div>
-                    <div class="col-sm-6">
-                        <h2>Desarrollo de Aplicaciones Multiplataforma / Web</h2>
-                        <ul class="list-inline">
-                            <li><span class="label label-primary">PHP</span></li>
-                            <li><span class="label label-danger">Java</span></li>
-                            <li><span class="label label-violet">C#</span></li>
-                            <li><span class="label label-primary">MySql</span></li>
-                            <li><span class="label label-primaryDark">JQuery</span></li>
-                            <li><span class="label label-violet">Bootstrap</span></li>
-                            <li><span class="label label-primary">CSS</span></li>
-                            <li><span class="label label-orange">HTML</span></li>
-                            <li><span class="label label-warning">JavaScript</span></li>
-                            <li><span class="label label-success">Android</span></li>
-                            <li><span class="label label-grey">WordPress</span></li>
-                            <li><span class="label label-orange">SMF</span></li>
-                            <li><span class="label label-default">MVC</span></li>
-                            <li><span class="label label-default">XML</span></li>
-                            <li><span class="label label-danger">AngularJS</span></li>
-                            <li><span class="label label-grey">Unity3D</span></li>
-                            <li><span class="label label-black">GitHub</span></li>
-                            <li><span class="label label-info">Subversion</span></li>
-                            <li><span class="label label-primary">Bitbucket</span></li>
-                            <li><span class="label label-primary">NetBeans</span></li>
-                            <li><span class="label label-violet">Visual Studio</span></li>
-                            <li><span class="label label-violet">Eclipse</span></li>
-                            <li><span class="label label-success">Android Studio</span></li>
-                            <li><span class="label label-primary">Workbench</span></li>
-                            <li><span class="label label-orange">XAMPP</span></li>
-                            <li><span class="label label-orange">Ubuntu</span></li>
-                            <li><span class="label label-light">Composer</span></li>
-                            <li><span class="label label-pink">SASS</span></li>
-                            <li><span class="label label-primary">Python</span></li>
-                            <li><span class="label label-default">JSON</span></li>
-                        </ul>
-                        <h2>Redes sociales</h2>
-                        <ul class="list-inline">
-                            <li><a href="https://es.linkedin.com/in/nicolasmarulanda" title="linkedin" target="_blank"><span class="label label-primary">Linkedin</span></a></li>
-                            <li><a href="https://twitter.com/nmarulo" title="twitter" target="_blank"><span class="label label-primary">Twitter</span></a></li>
-                            <li><a href="https://github.com/nmarulo" title="github" target="_blank"><span class="label label-black">GitHub</span></a></li>
-                            <li><a href="skype:nmarulo?chat" title="skype" target="_blank"><span class="label label-primary">Skype</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <nav>
-                <div class="container">
-                    <ul class="nav nav-pills">
-                        <li role="presentation">
-                            <a href="#proyectos-personales" title="">Proyectos personales</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#proyectos-particulares" title="">Proyectos particulares</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#proyectos-otros" title="">Otros proyectos</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <div>
-            <div class="container">
-                <div class="page-header">
-                    <h2 id="proyectos-personales">Proyectos personales <small>En desarrollo o finalizados.</small></h2>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-sm-6">
-                        <a href="softn-generating-receipt.html" class="thumbnail" title="Generador de facturas">
-                            <img src="img/softn.png" alt="Generador de facturas">
-                            <div class="caption">
-                                Generador de facturas
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6">
-                        <a href="softn-cms.html" class="thumbnail" title="SoftN CMS">
-                            <img src="img/softn-cms.png" alt="SoftN CMS">
-                            <div class="caption">
-                                SoftN CMS
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6">
-                        <a href="benalmas.html" class="thumbnail" title="Benalmas | Caminando por benalmadena">
-                            <img src="img/benalmas.png" alt="Benalmas">
-                            <div class="caption">
-                                Benalmas | Caminando por benalmadena
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="container">
-                <div class="page-header">
-                    <h2 id="proyectos-particulares">Proyectos particulares</h2>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-sm-6">
-                        <a href="electro-car.html" class="thumbnail" title="Electro Car | Servicio profesional de Car-Audio">
-                            <img src="img/electro-car.png" alt="Electro car">
-                            <div class="caption">
-                                Electro Car | Servicio profesional de Car-Audio
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="container">
-                <div class="page-header">
-                    <h2 id="proyectos-otros">Otros <small>Proyectos en los que participe o participo.</small></h2>
-                </div>
-                <div class="row clearfix">
-                    <div class="col-sm-6">
-                        <a href="food-fighter-malaga-nam-edition.html" class="thumbnail" title="Food Fighter: Málaga Ñam Edition">
-                            <img src="img/food-fighter.png" alt="Food Fighter: Málaga Ñam Edition">
-                            <div class="caption">
-                                Food Fighter: Málaga Ñam Edition
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6">
-                        <a href="invocator-the-dark-ritual.html" class="thumbnail" title="Invocator : the dark ritual">
-                            <img src="img/invocator.png" alt="Invocator : the dark ritual">
-                            <div class="caption">
-                                Invocator : the dark ritual
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-sm-6">
-                        <a href="inexistente.html" class="thumbnail" title="Inexistente">
-                            <img src="img/inexistente.png" alt="Inexistente">
-                            <div class="caption">
-                                Inexistente
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <div class="container">
-                <div class="row clearfix">
-                    <div class="col-sm-6">
-                         2016. Proudly Powered by Bootstrap.
-                    </div>
-                    <div class="col-sm-6">
-                        <p class="pull-right">by <a href="http://softn.red/" title="Portal SoftN">SoftN</a> - v1.0</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>nMarulo | Backend, java, sql</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <style>
+    /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}a{background-color:transparent}[hidden]{display:none}html{font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;line-height:1.5}*,:after,:before{box-sizing:border-box;border:0 solid #e2e8f0}a{color:inherit;text-decoration:inherit}svg,video{display:block;vertical-align:middle}video{max-width:100%;height:auto}.bg-white{--bg-opacity:1;background-color:#fff;background-color:rgba(255,255,255,var(--bg-opacity))}.bg-gray-100{--bg-opacity:1;background-color:#f7fafc;background-color:rgba(247,250,252,var(--bg-opacity))}.border-gray-200{--border-opacity:1;border-color:#edf2f7;border-color:rgba(237,242,247,var(--border-opacity))}.border-t{border-top-width:1px}.flex{display:flex}.grid{display:grid}.hidden{display:none}.items-center{align-items:center}.justify-center{justify-content:center}.font-semibold{font-weight:600}.h-5{height:1.25rem}.h-8{height:2rem}.h-16{height:4rem}.text-sm{font-size:.875rem}.text-lg{font-size:1.125rem}.leading-7{line-height:1.75rem}.mx-auto{margin-left:auto;margin-right:auto}.ml-1{margin-left:.25rem}.mt-2{margin-top:.5rem}.mr-2{margin-right:.5rem}.ml-2{margin-left:.5rem}.mt-4{margin-top:1rem}.ml-4{margin-left:1rem}.mt-8{margin-top:2rem}.ml-12{margin-left:3rem}.-mt-px{margin-top:-1px}.max-w-6xl{max-width:72rem}.min-h-screen{min-height:100vh}.overflow-hidden{overflow:hidden}.p-6{padding:1.5rem}.py-4{padding-top:1rem;padding-bottom:1rem}.px-6{padding-left:1.5rem;padding-right:1.5rem}.pt-8{padding-top:2rem}.fixed{position:fixed}.relative{position:relative}.top-0{top:0}.right-0{right:0}.shadow{box-shadow:0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06)}.text-center{text-align:center}.text-gray-200{--text-opacity:1;color:#edf2f7;color:rgba(237,242,247,var(--text-opacity))}.text-gray-300{--text-opacity:1;color:#e2e8f0;color:rgba(226,232,240,var(--text-opacity))}.text-gray-400{--text-opacity:1;color:#cbd5e0;color:rgba(203,213,224,var(--text-opacity))}.text-gray-500{--text-opacity:1;color:#a0aec0;color:rgba(160,174,192,var(--text-opacity))}.text-gray-600{--text-opacity:1;color:#718096;color:rgba(113,128,150,var(--text-opacity))}.text-gray-700{--text-opacity:1;color:#4a5568;color:rgba(74,85,104,var(--text-opacity))}.text-gray-900{--text-opacity:1;color:#1a202c;color:rgba(26,32,44,var(--text-opacity))}.underline{text-decoration:underline}.antialiased{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.w-5{width:1.25rem}.w-8{width:2rem}.w-auto{width:auto}.grid-cols-1{grid-template-columns:repeat(1,minmax(0,1fr))}@media (min-width:640px){.sm\:rounded-lg{border-radius:.5rem}.sm\:block{display:block}.sm\:items-center{align-items:center}.sm\:justify-start{justify-content:flex-start}.sm\:justify-between{justify-content:space-between}.sm\:h-20{height:5rem}.sm\:ml-0{margin-left:0}.sm\:px-6{padding-left:1.5rem;padding-right:1.5rem}.sm\:pt-0{padding-top:0}.sm\:text-left{text-align:left}.sm\:text-right{text-align:right}}@media (min-width:768px){.md\:border-t-0{border-top-width:0}.md\:border-l{border-left-width:1px}.md\:grid-cols-2{grid-template-columns:repeat(2,minmax(0,1fr))}}@media (min-width:1024px){.lg\:px-8{padding-left:2rem;padding-right:2rem}}@media (prefers-color-scheme:dark){.dark\:bg-gray-800{--bg-opacity:1;background-color:#2d3748;background-color:rgba(45,55,72,var(--bg-opacity))}.dark\:bg-gray-900{--bg-opacity:1;background-color:#1a202c;background-color:rgba(26,32,44,var(--bg-opacity))}.dark\:border-gray-700{--border-opacity:1;border-color:#4a5568;border-color:rgba(74,85,104,var(--border-opacity))}.dark\:text-white{--text-opacity:1;color:#fff;color:rgba(255,255,255,var(--text-opacity))}.dark\:text-gray-400{--text-opacity:1;color:#cbd5e0;color:rgba(203,213,224,var(--text-opacity))}}
+  </style>
+
+  <style>
+    body {
+      font-family: 'Nunito';
+    }
+  </style>
+</head>
+<body class="antialiased">
+<div class="relative flex items-top justify-center min-h-screen bg-gray-100 dark:bg-gray-900 sm:items-center sm:pt-0">
+  <div class="max-w-6xl mx-auto sm:px-6 lg:px-8">
+    <div class="flex justify-center pt-8 sm:justify-start sm:pt-0">
+      <h1 class="dark:text-white" style="margin-bottom: 0">nMarulo</h1>
+    </div>
+    <div class="flex justify-center sm:justify-start">
+      <p class="dark:text-white text-sm" style="margin-top: 0">El minimalismo es oro</p>
+    </div>
+    <div class="flex justify-center pt-8 sm:justify-start sm:pt-0">
+      <!-- Add a placeholder for the Twitch embed -->
+      <div id="twitch-embed" style="width: 800px; height: 400px;"></div>
+
+      <!-- Load the Twitch embed script -->
+      <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+
+      <!-- Create a Twitch.Player object. This will render within the placeholder div -->
+      <script type="text/javascript">
+        new Twitch.Player("twitch-embed", {
+          channel: "nmarulo",
+          width: 800,
+          height: 400
+        });
+      </script>
+    </div>
+  </div>
+</div>
+</body>
 </html>
